# orchestrator

./: .gitignore  LICENSE  README.md  pyproject.toml  ruff.toml  run.py  run_experiment.py  swarm.config.yaml
src/swarm/: __init__.py  core.py  mcp_client.py
